force-app/main/default/objects/SMS_Opt_Out__e/SMS_Opt_Out__e.object-meta.xml
<CustomObject>
    <label>SMS Opt Out</label>
    <pluralLabel>SMS Opt Out</pluralLabel>
</CustomObject>