force-app/main/default/objects/SMS_Opt_Out__e/fields/DestinationNumber__c.field-meta.xml
<CustomField>
    <fullName>DestinationNumber__c</fullName>
    <label>DestinationNumber</label>
    <length>30</length>
    <type>Text</type>
</CustomField>