force-app/main/default/objects/SMS_Opt_Out__e/fields/InboundMessageId__c.field-meta.xml
<CustomField>
    <fullName>InboundMessageId__c</fullName>
    <label>InboundMessageId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>