force-app/main/default/objects/SMS_Opt_Out__e/fields/MessageKeyword__c.field-meta.xml
<CustomField>
    <fullName>MessageKeyword__c</fullName>
    <label>MessageKeyword</label>
    <length>30</length>
    <type>Text</type>
</CustomField>