force-app/main/default/objects/SMS_Opt_Out__e/fields/optout__c.field-meta.xml
<CustomField>
    <fullName>optout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>optout</label>
    <type>Checkbox</type>
</CustomField>