force-app/main/default/objects/SMS_Opt_Out__e/fields/OriginationNumber__c.field-meta.xml
<CustomField>
    <fullName>OriginationNumber__c</fullName>
    <label>OriginationNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>