force-app/main/default/objects/SMS_Opt_Out__e/fields/PreviousPublishedMessageId__c.field-meta.xml
<CustomField>
    <fullName>PreviousPublishedMessageId__c</fullName>
    <label>PreviousPublishedMessageId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>